--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/GPUScore-RelicOfLife-icon.png
+    - images/Bookmark.png
+    - images/Ellipse21.png
+    - images/Like.png
+    - images/Refresh.png
+    - images/Share.png
+    - images/Comments.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
