Added color change to mcq buttons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     - images/Profile.png
     - images/Play.png
     - images/Arrow.png
+    - images/TickMark.png
+    - images/Cross.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
