--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tittokclone
+name: tiktokclone
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -76,7 +76,8 @@ flutter:
     - images/Arrow.png
     - images/TickMark.png
     - images/Cross.png
-  #   - images/a_dot_ham.jpeg
+    - images/Time.png
+    - images/Search.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
