--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "tittokclone" "\0"
+            VALUE "FileDescription", "tiktokclone" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tittokclone" "\0"
+            VALUE "InternalName", "tiktokclone" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "tittokclone.exe" "\0"
-            VALUE "ProductName", "tittokclone" "\0"
+            VALUE "OriginalFilename", "tiktokclone.exe" "\0"
+            VALUE "ProductName", "tiktokclone" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
